--- a/src/components/styles/Post.css
+++ b/src/components/styles/Post.css
@@ -57,7 +57,7 @@
 .post-details {
 	display: flex;
 	flex-direction: column;
-	justify-content: start;
+	justify-content: flex-start;
 }
 
 .post-links-wrapper {
